@@ -1,4 +1,6 @@
 DIST libtpclient-py-0.3.1.1.tar.bz2 46902 RMD160 954ddccdfd633aa63183cf6974438dd49f414e3f SHA1 5d1fddfd87b70ed0fb07dc1b7c7ab2b78980f26b SHA256 c52cc2dfeb5c396c086c201f144e41678c7fa23bae81de47e4974b9096ad0824
+DIST libtpclient-py-0.3.2.tar.bz2 61502 RMD160 32fe461d7afc28d808dcf169d5e705b6ae992685 SHA1 03f73790e6a2038ed2a9a953442ce1d03c624443 SHA256 db1573d8fcc6379a4f023e7ed98746ba1d454a801c95e1fc26533bdd25ae717f
 EBUILD libtpclient-py-0.3.1-r1.ebuild 676 RMD160 aa5a19811cb2899c178a97c3f781d63ea43f0484 SHA1 3071d9b088ef7a8f2576c8d63fa7d1453e122306 SHA256 77e27b2450af81a77144dbf183c122d63068a4ebfe3b273a454ac31d5482b8ed
-MISC ChangeLog 757 RMD160 56d07b91fdafc9a7d189270d097ef684d4b6b269 SHA1 a6ffed1e39161f39290c9a056799156e8c022063 SHA256 002d189d5b22f39c5093ea171909b302a0de39ec3b13adf86536e2e0888ac237
+EBUILD libtpclient-py-0.3.2.ebuild 672 RMD160 5b7c925183b14b3ca4951057f63a8512aee06938 SHA1 f41bda8f69d11e1eae5a7d327e88e980d45b5627 SHA256 622b6a96ac21e5aecdf72dccc970717541a3a07887d4844fdaa7a910af914bf4
+MISC ChangeLog 890 RMD160 a46a57344cda5b87150b6e5251cf0fdbe27762a0 SHA1 e0a38e5f7e948cea1f3b5cd56ca653a3ac4a692d SHA256 4dc0ae067a0c76cdec248849779f472bf9aa674634dc496e6b9480ccfa2a6535
 MISC metadata.xml 371 RMD160 c93c57c6700be28144da76711ee319c13d82349a SHA1 7a85f048686abbb460d4acab40773ae782378b48 SHA256 9a56915c69ed58cbb6d6745b205855ebe7b178765e4d41790c54977ac9632c92
