@@ -1,4 +1,7 @@
 DIST libtpproto-py-0.2.4.tar.bz2 49328 RMD160 f969168edd1cd36b78dd59f3c0513ba6c612041c SHA1 c2c21decbbd3e1cb454300dbccfbb8791de94368 SHA256 69704bd707f5e237ee0e82cbfa498a70295fe764c2cc438ec5ef9499f08fa8ed
+DIST libtpproto-py-0.2.5.tar.bz2 49584 RMD160 881023840c97520a5258e420e266e70b9503e184 SHA1 5ab8263f948d2a8a2158f97854c2447f60aecb72 SHA256 21bde4d3f69a45d967641151d9e8e03832a03a0224e68b870f1f60fa964b54e4
 EBUILD libtpproto-py-0.2.4.ebuild 767 RMD160 92529ed21246e71cbe97323e5097d5783cacfbf2 SHA1 5a881e615650ee680221e56c6423f825e982430c SHA256 02c5d9a0203a08430f2a58e64cad0a24839feb0316804cc73832323282596b63
-MISC ChangeLog 607 RMD160 cf02079292dd2ba3f4c9c8fd54e6b58ae01b35af SHA1 cfb484b5231bd4a98c5c9638cac3704642f3b280 SHA256 501e575aab7f9e1f83ca2cfdd500fc65bf51612d3b14eb065fbc0a7b80f0bb50
+EBUILD libtpproto-py-0.2.5.ebuild 767 RMD160 92529ed21246e71cbe97323e5097d5783cacfbf2 SHA1 5a881e615650ee680221e56c6423f825e982430c SHA256 02c5d9a0203a08430f2a58e64cad0a24839feb0316804cc73832323282596b63
+MISC ' 767 RMD160 92529ed21246e71cbe97323e5097d5783cacfbf2 SHA1 5a881e615650ee680221e56c6423f825e982430c SHA256 02c5d9a0203a08430f2a58e64cad0a24839feb0316804cc73832323282596b63
+MISC ChangeLog 738 RMD160 726e1b0e5b8b542fc53cff832e355ba8c896cb22 SHA1 48782f55f219bbba9954ff577994f5af27587a2c SHA256 5a42c2eed54d22b776244ff191524a220cb3a17da7a6f2014ad5f148e211caa4
 MISC metadata.xml 375 RMD160 9a3a066e62cdbfcb7fb2f14b35a482f375e4ed33 SHA1 648c02c63f450ca1080f13c9a2caa20178a7e9d7 SHA256 7a74f92bc3e30cc68545f4b8e0bec8188a1c9d2bf580e49b9d158cd052930718
