@@ -2,8 +2,10 @@ AUX tpclient-pywx-0.3.0-installed-script.patch 847 RMD160 d1dfb7db1bca63cc7ed847
 DIST tpclient-pywx-0.3.0.tar.bz2 1612379 RMD160 de06ab7c77a733003beb2eeef5b322ee85af8934 SHA1 b81dfa066e3067dba6363429a6005276e30d10e3 SHA256 aa3ad886b9d823e55edcb4adf8fef113f83a2cc481e986e9c82638cef35f76e9
 DIST tpclient-pywx-0.3.1.1.tar.bz2 1626883 RMD160 0c73db950aac5cd172795a7ac51c3e3c5d2467b3 SHA1 71c2a650aad7179f2d7f3de7e7458323be3d56ab SHA256 f6ee88a76ce5b28b174177fff2fa3d069d4eef1ed1041f445ab597a961e4caeb
 DIST tpclient-pywx-0.3.1.tar.bz2 1627088 RMD160 7c9f2ad21221ab10f4ba7b7a9a610d630043c62a SHA1 b97142c5e68a98bccbd86da70acc85692808c6db SHA256 75b5143ba272aa34f4867c32636802b3b3529c8c7f4c1066939a1702559109ae
+DIST tpclient-pywx-0.3.2.tar.bz2 1628357 RMD160 1c012b0635c1ada08678c2490775431fb49065f1 SHA1 5ffd8764743aad67a96389f45259c9dde5d8625d SHA256 a5cac153583cc566d42f65b86b5f6540fbf41a218da727731b2d3b0f1449bd30
 EBUILD tpclient-pywx-0.3.0.ebuild 1660 RMD160 52a35c41677e736b152dee373e72cc45e5688eb5 SHA1 64327e7f7ff98d37b1b4fe8206a483ebf22f93e2 SHA256 90845f0ef448864432f2c827fb2b167979940d12a9ec0cd46c1349241bdb746c
 EBUILD tpclient-pywx-0.3.1.1.ebuild 1916 RMD160 b63d31dc7e6a4358d3beae7a4b54b5b91af71366 SHA1 f8b275524a249035801d1db576b32b94b92a3a53 SHA256 df82f153513e08b7e3c1f5727d2972087a5a22927744f79b067fc80f8ef6d75e
 EBUILD tpclient-pywx-0.3.1.ebuild 1913 RMD160 44e945f1dd515cbd63963e6d99d90985334f980d SHA1 543a39e9f715015ffd84c5f052da6e18edb91b1b SHA256 e4d713abdfa63afa185875e409db5917a6373de31e04f610276e48d4251ae2de
-MISC ChangeLog 642 RMD160 bc46431907bf215e1f3e3a9de6f2596e03059a6b SHA1 5d3974fa00c05f79cd90c0443f769ce3d467980a SHA256 526c5aa465ab91439532f4a0ec5eb717d5a0a2e32b822316c75b0af01c9d43e2
+EBUILD tpclient-pywx-0.3.2.ebuild 1913 RMD160 673d160dfb4ffd33f08446d22bfe45f2bd2d5c5c SHA1 c7aa7d7fce74ca10d03e7b6a612ddca3799c84ac SHA256 11ff15108848682761e16c51c89709dabeb8da63b08a1f5a2e1c4ba094e7a017
+MISC ChangeLog 773 RMD160 e6ae63d277ff41ccccb0442b2fd967e2e57406d8 SHA1 730c4578c9150a0584bbdb24a29144caa3146d2c SHA256 48ecdf6473f56d49450387e16684a8108b4cf16311e10579b6ab2dd41aa91f0b
 MISC metadata.xml 330 RMD160 684eee9bb5b3eedf21c6a93f1518b86831e9abe3 SHA1 5b83d402b84f4f4a87aa7087dfb54cdbcec0ff6d SHA256 91458868890b9ba7882ae250aa5a2d803f6246ee54c2e46d667e4d9c7bd24fac
