@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libtpproto-py-0.2.5 (09 Jul 2009)
+
+  09 Jul 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-py-0.2.5.ebuild:
+  Version bump
+
   20 Feb 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-py-0.2.4.ebuild:
   Removed .pth file annoyance
 
