@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*tpclient-pywx-0.3.2 (09 Jul 2009)
+
+  09 Jul 2009; Aaron Mavrinac <mavrinac@gmail.com> tpclient-pywx-0.3.2.ebuild:
+  Version bump
+
 *tpclient-pywx-0.3.1.1 (18 Oct 2008)
 
   18 Oct 2008; Aaron Mavrinac <mavrinac@gmail.com> tpclient-pywx-0.3.1.1.ebuild:
