@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libtpclient-py-0.3.2 (09 Jul 2009)
+
+  09 Jul 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpclient-py-0.3.2.ebuild:
+  Version bump
+
   20 Feb 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpclient-py-0.3.1-r1.ebuild:
   Removed .pth file annoyance
 
